--- a/clipboard-landing-page-master/clipboard-landing-page-master/index.html
+++ b/clipboard-landing-page-master/clipboard-landing-page-master/index.html
@@ -176,7 +176,8 @@
 
 <footer>
     <article><img src="./images/logo.svg" alt="logo"></article>
-    <ul>
+
+    <ul class="extra">
         <li>
             <button>FAQS</button>
         </li>
@@ -184,7 +185,7 @@
             <button>Contact Us</button>
         </li>
     </ul>
-    <ul>
+    <ul class="extra">
         <li>
             <button>Privacy Policy
             </button>
@@ -194,16 +195,16 @@
             </button>
         </li>
     </ul>
-    <ul>
+    <ul class="extra">
         <li>
             <button>Install Guide
             </button>
         </li>
     </ul>
     <ul class="social-media">
-        <li><img src="./images/icon-facebook.svg" alt=""></li>
-        <li><img src="./images/icon-twitter.svg" alt=""></li>
-        <li><img src="./images/icon-instagram.svg" alt=""></li>
+        <li><img src="./images/icon-facebook.svg" alt="" id="fb"></li>
+        <li><img src="./images/icon-twitter.svg" alt="" id="twitter"></li>
+        <li><img src="./images/icon-instagram.svg" alt="" id="insta"></li>
     </ul>
 </footer>
 </body>
